--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:label="@string/app_name"
+            android:name=".App1Activity" >
+        </activity>
+
+        <activity
+            android:label="@string/app_name"
+            android:name=".App2Activity" >
+        </activity>
+
+        <activity
+            android:label="@string/app_name"
+            android:name=".App3Activity" >
+        </activity>
+
     </application>
 
 </manifest>
